Details
-
Bug
-
Status: Resolved
-
P2
-
Resolution: Fixed
-
17, 18, 19
-
b29
-
generic
-
linux
Backports
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8279110 | 19 | Zhengyu Gu | P2 | Resolved | Fixed | b04 |
JDK-8279748 | 18.0.1 | Zhengyu Gu | P2 | Resolved | Fixed | b02 |
JDK-8279578 | 17.0.3 | Zhengyu Gu | P2 | Resolved | Fixed | b01 |
Description
SAP reported TestHeapDump.java test crash on ppc64le:
A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/jdk17u/src/hotspot/cpu/ppc/relocInfo_ppc.cpp:67), pid=33507, tid=33520
# guarantee((address) (nativeMovConstReg_at(addr())->data()) == x) failed: data must match
#
# JRE version: OpenJDK Runtime Environment (17.0.1) (fastdebug build 17.0.1-internal+0-adhoc.openjdk.jdk17u)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17.0.1-internal+0-adhoc.openjdk.jdk17u, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-ppc64le)
# Problematic frame:
# V [libjvm.so+0x16bb648] Relocation::pd_set_data_value(unsigned char*, long, bool)+0x128
A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/jdk17u/src/hotspot/cpu/ppc/relocInfo_ppc.cpp:67), pid=33507, tid=33520
# guarantee((address) (nativeMovConstReg_at(addr())->data()) == x) failed: data must match
#
# JRE version: OpenJDK Runtime Environment (17.0.1) (fastdebug build 17.0.1-internal+0-adhoc.openjdk.jdk17u)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 17.0.1-internal+0-adhoc.openjdk.jdk17u, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, shenandoah gc, linux-ppc64le)
# Problematic frame:
# V [libjvm.so+0x16bb648] Relocation::pd_set_data_value(unsigned char*, long, bool)+0x128
Attachments
Issue Links
- backported by
-
JDK-8279110 Shenandoah: TestHeapDump test failed
-
- Resolved
-
-
JDK-8279578 Shenandoah: TestHeapDump test failed
-
- Resolved
-
-
JDK-8279748 Shenandoah: TestHeapDump test failed
-
- Resolved
-
- links to
-
Commit openjdk/jdk17u-dev/e54e3c42
-
Commit openjdk/jdk18/1128674d
-
Review openjdk/jdk17u-dev/58
-
Review openjdk/jdk18/56
-
Review openjdk/jdk/6864
(3 links to)