8278627: Shenandoah: TestHeapDump test failed on ppc64le